# Arena-Training

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml  pyproject.toml  setup.cfg  setup.py
arena_training/: __init__.py
arena_training/arena_rosnav_rl/: __init__.py
arena_training/arena_rosnav_rl/cfg/: train.py
arena_training/arena_rosnav_rl/cfg/arena_cfg/: __init__.py  arena_base.py  general.py  monitor.py  profile.py  robot.py  task.py
arena_training/arena_rosnav_rl/cfg/sb3_cfg/: __init__.py  callbacks.py
arena_training/arena_rosnav_rl/dreamerv3/: dreamerv3_curriculum.py
arena_training/arena_rosnav_rl/node/: __init__.py  supervisor_node.py
arena_training/arena_rosnav_rl/stable_baselines3/eval_callbacks/: initialization.py  shared_env_eval_callback.py
arena_training/arena_rosnav_rl/stable_baselines3/vec_wrapper/: delayed_subproc_vec_env.py  profiler.py  vec_stats_recorder.py
arena_training/arena_rosnav_rl/tools/: config.py  constants.py  dynamic_parameter.py  env_utils.py  general.py  log_utils.py  model_utils.py  states.py
arena_training/arena_rosnav_rl/trainer/: __init__.py  arena_trainer.py  dreamerv3_trainer.py  sb3_trainer.py
arena_training/arena_rosnav_rl/utils/: argsparser.py  config.py  constants.py  dummy.py  env_factory.py  envs.py  hooks.py  log_utils.py  monitoring.py  paths.py  training.py
arena_training/arena_rosnav_rl/utils/observation_collector/observation_units/: aggregate_collector_unit.py  base_collector_unit.py  semantic_ped_unit.py
arena_training/arena_rosnav_rl/utils/rewards/: reward_function.py  utils.py
arena_training/arena_rosnav_rl/utils/rewards/reward_units/: reward_units.py
arena_training/arena_rosnav_rl/utils/type_alias/: observation.py
arena_training/arena_rosnav_rl/utils/vec_wrapper/: vec_stats_recorder.py
arena_training/environments/: __init__.py  base_env.py  flatland_gymnasium_env.py  gazebo_env.py
arena_training/environments/wrappers/: __init__.py  time_sync_wrapper.py
configs/: dreamer_poc_config.yaml  dreamer_training_config.yaml  ped_test_config.yaml  sb_training_config.yaml
configs/observations/: observations.yaml
configs/reward_functions/: base_semantic.yaml
configs/training_curriculums/: test.yaml
launch/: training.launch.py
resource/: arena_training
scripts/: test_agent.py  train_agent.py  tune_agent.py
